--- a/waybar/.config/waybar/theme.css
+++ b/waybar/.config/waybar/theme.css
@@ -1,56 +1,48 @@
 
-/* Tooltip and menu borders */
-@define-color tooltip_border #93a1a1; /* base1 */
-@define-color tooltip_bg #eee8d5; /* base2 */
-@define-color tooltip_fg #586e75; /* base01 */
+@define-color bg_selected #282828;
+@define-color fg #ebdbb2;
+@define-color border #98971a;
 
-@define-color menu_border #839496; /* base0 */
-@define-color menu_bg #fdf6e3; /* base3 */
-@define-color menu_fg #586e75; /* base01 */
+@define-color bg_alt #282828;
+@define-color fg_alt #ebdbb2;
+@define-color warning #98971a;
 
-/* Main colors */
-@define-color bg #fdf6e3; /* base2 */
+@define-color accent #fabd2f;
+@define-color border_alt #d79921;
+@define-color workspace_active_fg #282828;
 
-@define-color bg_selected #fdf6e3; /* base3 */
-@define-color fg #657b83; /* base00 */
-@define-color border #93a1a1; /* base1 */
+@define-color fg_selected #a9b665;
+@define-color workspace_hover_bg #282828;
+@define-color hover #f2594b;
 
-/* Active workspace colors */
-@define-color accent #268bd2; /* blue */
-@define-color workspace_active_fg #fdf6e3; /* base3 */
-@define-color border_alt #268bd2; /* blue */
+* {
+    font-family: "Miracode";
+}
 
-/* Hover colors */
-@define-color workspace_hover_bg #2aa198; /* cyan */
-@define-color fg_selected #fdf6e3; /* base3 */
-@define-color hover #2aa198; /* cyan */
+@define-color bg #32302f;
 
-/* Standard color palette - base colors */
-@define-color c1 #dc322f;
-@define-color c2 #859900;
-@define-color c3 #b58900;
-@define-color c4 #268bd2;
-@define-color c5 #6c71c4; /* violet */
-@define-color c6 #2aa198;
-@define-color c7 #cb4b16;
-@define-color c8 #657b83; /* base00 */
+@define-color c1 #ea6962;
+@define-color c9 #f2594b;
+@define-color c2 #a9b665;
+@define-color c10 #a9b665;
+@define-color c3 #d8a657;
+@define-color c11 #e78a4e;
+@define-color c4 #7daea3;
+@define-color c12 #7daea3;
+@define-color purple #d3869b;
+@define-color purple_bright #e78a4e;
+@define-color aqua #89b482;
+@define-color aqua_bright #7daea3;
+@define-color c0 #272727;
+@define-color c8 #928373;
+@define-color c7 #a89983;
+@define-color c15 #ebdbb2;
 
-/* Standard color palette - bright/accent variants */
-@define-color c9 #dc322f;
-@define-color c10 #859900;
-@define-color c11 #b58900;
-@define-color c12 #268bd2;
-@define-color c13 #d33682; /* magenta */
-@define-color c14 #2aa198;
-@define-color c15 #cb4b16;
-@define-color c16 #586e75; /* base01 */
-
-@define-color bg_alt @bg;
-@define-color warning @c3;
 @define-color critical @c1;
-@define-color c0 @bg;
-
-@define-color fg_alt @fg;
+@define-color c5 @accent;
+@define-color c6 @hover;
+@define-color c13 @c5;
+@define-color c14 @c6;
 @define-color accent_bg @accent;
 @define-color accent_fg @accent;
 @define-color warning_bg @warning;
@@ -67,5 +59,10 @@
 @define-color secondary_fg @fg;
 @define-color highlight_bg @bg_selected;
 @define-color highlight_fg @fg_selected;
-@define-color workspace_active_bg #fdf6e3;
-@define-color workspace_active_br #268bd2;
+@define-color menu_bg @bg;
+@define-color menu_fg @fg;
+@define-color menu_border @border;
+@define-color tooltip_bg @bg_alt;
+@define-color tooltip_fg @fg;
+@define-color tooltip_border @border;
+@define-color workspace_active_bg @bg_selected;
