--- a/swaync/.config/swaync/theme.css
+++ b/swaync/.config/swaync/theme.css
@@ -1,20 +1,20 @@
 
-@define-color fg-primary #ddc7a1;
-@define-color fg-secondary #c5b597;
+@define-color fg-primary #FFFFFF;
+@define-color fg-secondary #FFE4CC;
 
-@define-color bg-primary #282828;
-@define-color bg-secondary #32302f;
-@define-color bg-tertiary #3c3836;
+@define-color bg-primary #131311;
+@define-color bg-secondary #525229;
+@define-color bg-tertiary #8F8F57;
 
-@define-color accent-red #ea6962;
-@define-color accent-green #a9b665;
-@define-color accent-yellow #d8a657;
-@define-color accent-blue #7daea3;
-@define-color accent-purple #d3869b;
-@define-color accent-aqua #89b482;
-@define-color accent-orange #e78a4e;
+@define-color accent-red #FFE4CC;
+@define-color accent-green #FFE1CC;
+@define-color accent-yellow #FFE1CC;
+@define-color accent-blue #E6E69A;
+@define-color accent-purple #E6B99A;
+@define-color accent-aqua #E6B99A;
+@define-color accent-orange #F0CBAA;
 
-@define-color border-primary #504945;
-@define-color border-secondary #665c54;
+@define-color border-primary #8F8F57;
+@define-color border-secondary #5E4533;
 
-@define-color gray #928374;
+@define-color gray #8F8F57;
