--- a/waybar/.config/waybar/theme.css
+++ b/waybar/.config/waybar/theme.css
@@ -1,52 +1,51 @@
 
-@define-color bg_selected #282828;
-@define-color fg #ebdbb2;
-@define-color border #98971a;
+@define-color bg #161925;
+@define-color fg #c74ded;
+@define-color fg #A56DF2;
 
-@define-color bg_alt #282828;
-@define-color fg_alt #ebdbb2;
-@define-color warning #98971a;
+@define-color bg_selected #00c1e4;
+@define-color fg_selected #463465;
 
-@define-color accent #fabd2f;
-@define-color border_alt #d79921;
-@define-color workspace_active_fg #282828;
+@define-color workspace_hover_bg #71f79f;
+@define-color hover #495495;
+@define-color hover #F2CB07;
 
-@define-color fg_selected #a9b665;
-@define-color workspace_hover_bg #282828;
-@define-color hover #f2594b;
+@define-color border #564873; /* yellow cursor */
 
-* {
-    font-family: "Miracode";
-}
+@define-color bg_alt #564873; /* pink/blue */
+@define-color fg_alt #000000;
+@define-color warning #F29C6B; /* orange */
 
-@define-color bg #32302f;
+/* Active workspace colors */
+@define-color accent #00c1e4; /* cyan */
+@define-color workspace_active_fg #FDF500;
+@define-color border_alt #4DBD4F; /* green */
 
-@define-color c1 #ea6962;
-@define-color c9 #f2594b;
-@define-color c2 #a9b665;
-@define-color c10 #a9b665;
-@define-color c3 #d8a657;
-@define-color c11 #e78a4e;
-@define-color c4 #7daea3;
-@define-color c12 #7daea3;
-@define-color purple #d3869b;
-@define-color purple_bright #e78a4e;
-@define-color aqua #89b482;
-@define-color aqua_bright #7daea3;
-@define-color c0 #272727;
-@define-color c8 #928373;
-@define-color c7 #a89983;
-@define-color c15 #ebdbb2;
+/* Standard color palette - base colors */
+@define-color c0 #1F2229;
+@define-color c1 #D62246;
+@define-color c2 #4DBD4F;
+@define-color c3 #FDF500;
+@define-color c4 #F29C6B;
+@define-color c5 #A56DF2;
+@define-color c6 #2CF6B3;
+@define-color c7 #E6E6E6;
+
+/* Standard color palette - bright/accent variants */
+@define-color c8 #E6E6E6;
+@define-color c9 #EC0101;
+@define-color c10 #1F5322;
+@define-color c11 #F2CB07;
+@define-color c12 #FFA6C2;
+@define-color c13 #564873;
+@define-color c14 #37EBF3;
+@define-color c15 #FFFFFF;
 
 @define-color critical @c1;
-@define-color c5 @accent;
-@define-color c6 @hover;
-@define-color c13 @c5;
-@define-color c14 @c6;
 @define-color accent_bg @accent;
 @define-color accent_fg @accent;
 @define-color warning_bg @warning;
-@define-color warning_fg @warning;
+@define-color warning_fg #D62246;
 @define-color error_bg @critical;
 @define-color error_fg @critical;
 @define-color info_bg @accent;
@@ -65,4 +64,5 @@
 @define-color tooltip_bg @bg_alt;
 @define-color tooltip_fg @fg;
 @define-color tooltip_border @border;
-@define-color workspace_active_bg @bg_selected;
+@define-color workspace_active_bg #463465;
+@define-color workspace_active_br #FDF500;
