--- a/waybar/.config/waybar/theme.css
+++ b/waybar/.config/waybar/theme.css
@@ -1,46 +1,52 @@
 
 /* Main colors */
-@define-color bg #073642; /* base02 */
+@define-color bg #1d1d1d; /* g_10 */
 
-@define-color bg_selected #268bd2;
-@define-color fg #fdf6e3;
-@define-color border #268bd2; /* base01 */
+@define-color bg_selected #4A8B8B; /* background */
+@define-color fg #e5e5e5; /* g_1 */
+@define-color border #7A3D82; /* g_9 */
 
-@define-color bg_alt #268bd2;
-@define-color fg_alt #fdf6e3;
-@define-color warning #268bd2;
+@define-color bg_alt #6E91C4; /* background */
+@define-color fg_alt #e5e5e5; /* g_1 */
+@define-color warning #4A8B8B; /* g_9 */
 
 /* Active workspace colors */
-@define-color accent #2aa198;
-@define-color workspace_active_fg #fdf6e3;
-@define-color border_alt #2aa198; /* blue */
+@define-color workspace_hover_bg #121212; /* background */
+@define-color fg_selected #7A3D82; /* orange_glow */
+@define-color hover #1E6F54; /* orange_glow */
 
 /* Hover colors */
-@define-color workspace_hover_bg #eee8d5;
-@define-color fg_selected #b58900;
-@define-color hover #cb4b16; /* cyan */
+@define-color accent #D87C4A; /* red_glowing */
+@define-color workspace_active_fg #121212; /* background */
+@define-color border_alt #B41211; /* red_glowing */
 
 /* Standard color palette - base colors */
-@define-color c0 #002731;
-@define-color c1 #dc322f;
-@define-color c2 #859900;
-@define-color c3 #b58900;
-@define-color c4 #268bd2;
-@define-color c5 #6c71c4; /* violet */
-@define-color c6 #2aa198;
-@define-color c7 #e9e2cb;
+@define-color c0 #1a1815;
+@define-color c1 #C53030; /* red_flame */
+@define-color c2 #1E6F54; /* green */
+@define-color c3 #E5A72A; /* orange_golden */
+@define-color c4 #4A8B8B; /* blue */
+@define-color c5 #7A3D82; /* purple */
+@define-color c6 #4A8B8B; /* blue */
+@define-color c16 #D87C4A; /* orange_glow */
+@define-color c17 #737373; /* g_6 */
+@define-color c7 #c9b9a8;
 
 /* Standard color palette - bright/accent variants */
-@define-color c8 #006388;
-@define-color c9 #dc322f;
-@define-color c10 #859900;
-@define-color c11 #b58900;
-@define-color c12 #268bd2;
-@define-color c13 #d33682; /* magenta */
-@define-color c14 #2aa198;
-@define-color c15 #fcf4dc;
+@define-color c8 #737373;
+@define-color c9 #DF6464; /* red_glowing */
+@define-color c10 #629C7D; /* green_light */
+@define-color c11 #E5A72A; /* orange_golden */
+@define-color c12 #6E91C4; /* cyan */
+@define-color c13 #8E5E93; /* violet */
+@define-color c14 #4AC4C4; /* aqua */
+@define-color c18 #E49A44; /* orange_smolder */
+@define-color c19 #b4b4b4; /* g_3 */
+@define-color c15 #dfd2c4;
 
 @define-color critical @c1;
+@define-color c5 @accent;
+@define-color c13 @c5;
 @define-color accent_bg @accent;
 @define-color accent_fg @accent;
 @define-color warning_bg @warning;
@@ -63,5 +69,5 @@
 @define-color tooltip_bg @bg_alt;
 @define-color tooltip_fg @fg;
 @define-color tooltip_border @border;
-@define-color workspace_active_bg #002731;
-@define-color workspace_active_br #b58900;
+@define-color workspace_active_br #B41211;
+@define-color workspace_active_bg #522929;
