--- a/swaync/.config/swaync/theme.css
+++ b/swaync/.config/swaync/theme.css
@@ -1,20 +1,20 @@
 
-@define-color fg-primary #f2f4f8;
-@define-color fg-secondary #dde1e6;
+@define-color fg-primary #f1eff0;
+@define-color fg-secondary #c3b7b8;
 
-@define-color bg-primary #161616;
-@define-color bg-secondary #262626;
-@define-color bg-tertiary #393939;
+@define-color bg-primary #2c2525;
+@define-color bg-secondary #403838;
+@define-color bg-tertiary #4c4545;
 
-@define-color accent-red #ff7eb6;
-@define-color accent-green #42be65;
-@define-color accent-yellow #f1c21b;
-@define-color accent-blue #78a9ff;
-@define-color accent-purple #be95ff;
-@define-color accent-aqua #3ddbd9;
-@define-color accent-orange #ff832b;
+@define-color accent-red #fd6883;
+@define-color accent-green #adda78;
+@define-color accent-yellow #f9cc6c;
+@define-color accent-blue #85dacc;
+@define-color accent-purple #a8a9eb;
+@define-color accent-aqua #85dacc;
+@define-color accent-orange #f38d70;
 
-@define-color border-primary #525252;
-@define-color border-secondary #6f6f6f;
+@define-color border-primary #72696a;
+@define-color border-secondary #948a8b;
 
-@define-color gray #525252;
+@define-color gray #72696a;
