--- a/waybar/.config/waybar/theme.css
+++ b/waybar/.config/waybar/theme.css
@@ -1,65 +1,53 @@
-
-/* Main colors */
-@define-color bg #262626; /* base01 */
-
-@define-color bg_selected #161616; /* base00 */
-@define-color fg #f2f4f8; /* base05 */
-@define-color border #595969; /* base02 */
-
-@define-color bg_alt #161616; /* base00 */
-@define-color fg_alt #f2f4f8; /* base05 */
-@define-color warning #393939; /* base02 */
-
-/* Active workspace colors */
-@define-color accent #78a9ff; /* base09 - blue */
-@define-color workspace_active_fg #161616; /* base00 */
-@define-color border_alt #78a9ff; /* base09 */
-
-/* Hover colors */
-@define-color fg_selected #be95ff; /* base08 - cyan */
-@define-color workspace_hover_bg #161616; /* base00 */
-@define-color hover #3ddbd9; /* base08 */
-
-/* Standard color palette - base colors */
-@define-color c0 #262626;
-@define-color c1 #ee5396; /* base10 */
-@define-color c2 #42be65; /* base13 */
-@define-color c3 #ffe97b; /* base15 */
-@define-color c4 #33b1ff; /* base09 */
-@define-color c6 #3ddbd9; /* base08 */
-@define-color c7 #dde1e6; /* base04 */
-/* Standard color palette - bright/accent variants */
-@define-color c8 #393939;
-@define-color c9 #ee5396; /* base10 */
-@define-color c10 #42be65; /* base13 */
-@define-color c11 #ffe97b; /* base15 */
-@define-color c12 #33b1ff; /* base11 */
-@define-color c14 #3ddbd9; /* base07 */
-@define-color c15 #ffffff; /* base06 */
+@define-color bg #2C2525;
+@define-color bg_selected #87B0F9;
+@define-color border #87B0F9;
+@define-color fg #F8F8F2;
+@define-color bg_alt #87B0F9;
+@define-color warning #87B0F9;
+@define-color accent #F92672;
+@define-color border_alt #F38BA8;
+@define-color workspace_active_fg #F8F8F2;
+@define-color workspace_hover_bg #F5C2E7;
+@define-color hover #AE81FF;
+@define-color fg_selected #A6E22E;
+@define-color highlight_bg #87B0F9;
+@define-color highlight_fg #F8F8F2;
+@define-color warning_bg #F38BA8;
+@define-color warning_fg #272822;
+@define-color success_bg #A6E3A1;
+@define-color success_fg #272822;
+@define-color error_bg #F38BA8;
+@define-color error_fg #272822;
+@define-color info_bg #66D9EF;
+@define-color info_fg #F8F8F2;
+@define-color neutral_bg #49483E;
+@define-color neutral_fg #A6E22E;
+@define-color secondary_bg #75715E;
+@define-color secondary_fg #F8F8F2;
+@define-color accent_bg #AE81FF;
+@define-color accent_fg #F8F8F2;
+@define-color c0 #403838;
+@define-color c8 #72696a;
+@define-color c1 #F92672;
+@define-color c9 #F92672;
+@define-color c2 #A6E3A1;
+@define-color c10 #A6E3A1;
+@define-color c3 #F9E2AF;
+@define-color c11 #F9E2AF;
+@define-color c4 #F38D70;
+@define-color c12 #F38D70;
+@define-color c7 #F8F8F2;
+@define-color c15 #F8F8F2;
 @define-color critical @c1;
-@define-color c5 #ff7eb6;
-@define-color c13 #ff7eb6;
-@define-color accent_bg @accent;
-@define-color accent_fg @accent;
-@define-color warning_bg @warning;
-@define-color warning_fg @warning;
-@define-color error_bg @critical;
-@define-color error_fg @critical;
-@define-color info_bg @accent;
-@define-color info_fg @accent;
-@define-color success_bg @c2;
-@define-color success_fg @c2;
-@define-color neutral_bg @bg_alt;
-@define-color neutral_fg @fg;
-@define-color secondary_bg @bg_alt;
-@define-color secondary_fg @fg;
-@define-color highlight_bg @bg_selected;
-@define-color highlight_fg @fg_selected;
+@define-color c5 #F5C2E7;
+@define-color c6 #94E2D5;
+@define-color c13 #F5C2E7;
+@define-color c14 #94E2D5;
+@define-color fg_alt @fg;
 @define-color menu_bg @bg;
 @define-color menu_fg @fg;
 @define-color menu_border @border;
 @define-color tooltip_bg @bg_alt;
 @define-color tooltip_fg @fg;
 @define-color tooltip_border @border;
-@define-color workspace_active_bg #161616;
-@define-color workspace_active_br #be95ff;
+@define-color workspace_active_br #AE81FF;
