--- a/swaync/.config/swaync/style.css
+++ b/swaync/.config/swaync/style.css
@@ -16,6 +16,6 @@
   font-size: 18pt;
   text-shadow: none;
   color: @fg-primary;
-  border-radius: 4px;
-  -gtk-icon-theme-name: "Monokai";
+  border-radius: 2px;
+  -gtk-icon-theme-name: "Vivid-Glassy-Dark-Icons";
 }
