--- a/waybar/.config/waybar/theme.css
+++ b/waybar/.config/waybar/theme.css
@@ -1,53 +1,53 @@
-@define-color bg #2C2525;
-@define-color bg_selected #87B0F9;
-@define-color border #87B0F9;
-@define-color fg #F8F8F2;
-@define-color bg_alt #87B0F9;
-@define-color warning #87B0F9;
-@define-color accent #F92672;
-@define-color border_alt #F38BA8;
-@define-color workspace_active_fg #F8F8F2;
-@define-color workspace_hover_bg #F5C2E7;
-@define-color hover #AE81FF;
-@define-color fg_selected #A6E22E;
-@define-color highlight_bg #87B0F9;
-@define-color highlight_fg #F8F8F2;
-@define-color warning_bg #F38BA8;
-@define-color warning_fg #272822;
-@define-color success_bg #A6E3A1;
-@define-color success_fg #272822;
-@define-color error_bg #F38BA8;
-@define-color error_fg #272822;
-@define-color info_bg #66D9EF;
-@define-color info_fg #F8F8F2;
-@define-color neutral_bg #49483E;
-@define-color neutral_fg #A6E22E;
-@define-color secondary_bg #75715E;
-@define-color secondary_fg #F8F8F2;
-@define-color accent_bg #AE81FF;
-@define-color accent_fg #F8F8F2;
-@define-color c0 #403838;
-@define-color c8 #72696a;
-@define-color c1 #F92672;
-@define-color c9 #F92672;
-@define-color c2 #A6E3A1;
-@define-color c10 #A6E3A1;
-@define-color c3 #F9E2AF;
-@define-color c11 #F9E2AF;
-@define-color c4 #F38D70;
-@define-color c12 #F38D70;
-@define-color c7 #F8F8F2;
-@define-color c15 #F8F8F2;
+@define-color bg #13131D;
+@define-color bg_selected #13131D;
+@define-color fg #FFFFFF;
+@define-color border #81a1c1;
+@define-color accent #6AA9C9;
+@define-color workspace_active_fg #EFEFF5;
+@define-color border_alt #81a1c1;
+@define-color workspace_hover_bg #020817;
+@define-color fg_selected #6AA9C9;
+@define-color hover #ae00f3;
+@define-color bg_alt #8fbcbb;
+@define-color fg_alt #FFFFFF;
+@define-color warning #78c6eb;
+@define-color c1 #40E0D0;
+@define-color c9 #d94a8a;
+@define-color c2 #abf157;
+@define-color c10 #daffa8;
+@define-color c3 #fdcd5e;
+@define-color c11 #fee6a8;
+@define-color c4 #78C6EB;
+@define-color c12 #b1bdf9;
+@define-color c5 #DE3163;
+@define-color c13 #fda4cc;
+@define-color c6 #78C6EB;
+@define-color c14 #a4bc86;
+@define-color c8 #6c5a30;
 @define-color critical @c1;
-@define-color c5 #F5C2E7;
-@define-color c6 #94E2D5;
-@define-color c13 #F5C2E7;
-@define-color c14 #94E2D5;
-@define-color fg_alt @fg;
+@define-color c0 #03063c;
+@define-color c7 #f8f9f9;
+@define-color c15 #f6ffec;
+@define-color accent_bg @accent;
+@define-color accent_fg @accent;
+@define-color warning_bg @warning;
+@define-color warning_fg #ae00f3;
+@define-color error_bg @critical;
+@define-color error_fg @critical;
+@define-color info_bg @accent;
+@define-color info_fg @accent;
+@define-color success_bg @c2;
+@define-color success_fg @c2;
+@define-color neutral_bg @bg_alt;
+@define-color neutral_fg @fg;
+@define-color secondary_bg @bg_alt;
+@define-color secondary_fg @fg;
+@define-color highlight_bg @bg_selected;
+@define-color highlight_fg @fg_selected;
 @define-color menu_bg @bg;
 @define-color menu_fg @fg;
 @define-color menu_border @border;
 @define-color tooltip_bg @bg_alt;
 @define-color tooltip_fg @fg;
 @define-color tooltip_border @border;
-@define-color workspace_active_br #AE81FF;
+@define-color workspace_active_bg @bg_selected;
